--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,15 @@
     "require": {
         "fanamurov/larrock-core": "^0.1",
         "fanamurov/larrock-users": "^0.1"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Larrock\\ComponentReviews\\LarrockComponentReviewsServiceProvider"
+            ],
+            "aliases": {
+                "LarrockReviews": "Larrock\\ComponentReviews\\Facades\\LarrockReviews"
+            }
+        }
     }
 }
