--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
         }
     },
     "require": {
-        "fanamurov/larrock-core": "^0.3",
-        "fanamurov/larrock-users": "^0.3"
+        "fanamurov/larrock-core": "^1.0"
     },
     "extra": {
         "laravel": {
