--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,31 @@
             "email": "fanamurov@ya.ru"
         }
     ],
+    "require-dev": {
+        "laravel/framework": "5.6.*",
+        "proengsoft/laravel-jsvalidation": "^2.0",
+        "davejamesmiller/laravel-breadcrumbs": "5.*",
+        "nicolaslopezj/searchable": "^1.9",
+        "spatie/laravel-medialibrary": "^7.0.0",
+        "phpunit/phpunit" : "^6.2|^7.0",
+        "mockery/mockery": "^1.0.0",
+        "orchestra/testbench": "~3.5.0|~3.6.0",
+        "doctrine/dbal": "^2.5.2",
+        "fanamurov/larrock-core": "^1.0"
+    },
     "autoload": {
         "psr-4": {
             "Larrock\\ComponentReviews\\": "src",
             "Larrock\\ComponentReviews\\Models\\": "src/Models",
             "Larrock\\ComponentReviews\\Requests\\": "src/Requests"
+        }
+    },
+    "autoload-dev": {
+        "classmap": [
+            "tests/"
+        ],
+        "psr-4": {
+            "Larrock\\ComponentReviews\\Tests\\": "tests"
         }
     },
     "extra": {
